<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="5dp"
    android:paddingTop="5dp"
    android:paddingRight="5dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cardLineList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardElevation="2dp"
        card_view:cardUseCompatPadding="true"
        card_view:contentPaddingTop="-1.5dp"
        card_view:contentPaddingLeft="-1.5dp"
        card_view:contentPaddingRight="-1.5dp"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:textColor="@color/blue"
                android:textSize="24dp"
                android:text="@string/card_report_bug_phrase_one"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:textSize="20dp"
                android:text="@string/card_report_bug_phrase_two"/>

            <Button
                android:id="@+id/reportBugButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:background="@color/blue"
                android:layout_gravity="center_horizontal"
                android:textSize="16dp"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:text="@string/card_report_bug_phrase_three"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>