<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="5dp"
    android:paddingTop="5dp"
    android:paddingRight="5dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cardLineList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:contentPaddingTop="-1.5dp"
        card_view:contentPaddingLeft="-1.5dp"
        card_view:contentPaddingRight="-1.5dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/sp_card_border_grey">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:lineSpacingMultiplier="1.1"
                    android:text="@string/card_research_phrase_one"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:lineSpacingMultiplier="1.1"
                    android:textColor="@color/blue"
                    android:text="@string/card_research_phrase_two"
                    />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="20dp"
                    android:paddingBottom="10dp">

                    <com.voudeonibus.views.utils.SeekbarWithIntervals
                        android:id="@+id/seekbarWithIntervals"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">
                    </com.voudeonibus.views.utils.SeekbarWithIntervals>
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="bottom">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:background="@drawable/sp_special_card_button_left_border"
                    android:textColor="@color/blue"
                    android:textSize="18dp"
                    android:text="@string/card_button_answer"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:background="@drawable/sp_special_card_button_right_border"
                    android:textColor="@color/blue"
                    android:textSize="18dp"
                    android:text="@string/card_button_close"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>