<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="5dp"
    android:paddingTop="5dp"
    android:paddingRight="5dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cardLineList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:contentPaddingTop="-1.5dp"
        card_view:contentPaddingLeft="-1.5dp"
        card_view:contentPaddingRight="-1.5dp"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="23dp"
                    android:layout_marginBottom="18dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:lineSpacingExtra="5sp"
                    android:textAllCaps="true"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/card_init_phrase_one"
                    android:text="@string/cd_init_phrase_one"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:lineSpacingExtra="5sp"
                    android:textColor="#727272"
                    android:textSize="@dimen/card_init_phrase_two"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/cd_init_phrase_two"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#727272"
                    android:textSize="@dimen/card_init_phrase_two"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/cd_init_phrase_three"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="56dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:layout_gravity="bottom"
                android:background="#f9f9f9">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_horizontal|center_vertical">

                    <Button
                        android:id="@+id/vouAgoraButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/card_init_button"
                        android:text="@string/cd_init_button"
                        android:background="@null"
                        android:drawablePadding="6dp"
                        android:drawableRight="@drawable/ic_vouagoravouagora_intro_arrow"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>